package org.switch2022.project.service;

public class Service {
}
