@startuml

skinparam sequenceMessageAlign center
title TO ADD A CUSTOMER
legend top
US009 - As Administrator, I want to add a customer
end legend

class "AddCustomerController" {
-service
+AddCustomerController(service)
+addCustomer(email,customerName)
}

class "Service"{
-company
+Service(company)
+addCustomer(email,customerName)
}

class "Company"{
-customerContainer
-accountContainer
-validateAdministrator(email)
+addCustomer(customerName)
}

class "AccountContainer"{
-accounts
+getAccountByEmail(email)
+validateAdministrator(email)
}

class "Account"{
-name
-email
-phoneNumber
-photo
-status
+isAdministrator()
}

class "CustomerContainer"{
-customers
-doesCustomerExist(customerName)
+addCustomer(customerName)
}

class "Customer"{
-customerName
+Customer(customerName)
}

"AddCustomerController" "1" ..> "1" "Service"
"Service" "1" --> "1" "Company"
"Company" "1"-->"1" "CustomerContainer": has
"Company" "1"-->"1" "AccountContainer": has
"CustomerContainer" "1"-->"*" "Customer": has
"AccountContainer" "1" --> "*" "Account": has

@enduml